<resources>
    <string name="app_name">Kézilabda statisztika</string>
    <string name="new_match">Új mérkőzés</string>
    <string name="players">Játékosok</string>
    <string name="matches">Mérkőzések</string>
    <string name="contact">Kapcsolat</string>
    <string name="home">Kezdőlap</string>
    <string name="date">Dátum</string>
    <string name="opponent">Ellenfél</string>
    <string name="start">Indítás</string>
    <string name="yyyy_mm_dd">ÉÉÉÉ.HH.NN</string>
    <string name="numberOfMatches">Mérkőzések száma: </string>
    <string name="addPlayerName">Név</string>
    <string name="addPlayerTeam">Csapat</string>
    <string name="add">Hozzáadás</string>
    <string name="addPlayerTitle">Új játékos hozzáadása</string>
    <string name="addPlayerId">Engedélyszám</string>
    <string name="statisticsLabel">Részletes statisztika</string>
    <string name="save">Védés</string>
    <string name="goal">Gól</string>
    <string name="efficiency">Hatékonyság</string>
    <string name="position">Pozíció</string>
    <string name="leftWing">Balszélső</string>
    <string name="leftBack">Balátlövő</string>
    <string name="centralBack">Irányító</string>
    <string name="rightBack">Jobbátlövő</string>
    <string name="rightWing">Jobbszélső</string>
    <string name="pivot">Beálló</string>
    <string name="breakIn">Betörés</string>
    <string name="fastBreak">Lerohanás</string>
    <string name="sevenMeters">7 méteres</string>
    <string name="summary">Összesen</string>
    <string name="twoMinutes">2 perc</string>
    <string name="yellowCard">Sárga lap</string>
    <string name="redCard">Piros lap</string>
    <string name="blueCard">Kék lap</string>
    <string name="export">Exportálás</string>
    <string name="exit">Kilépés</string>
    <string name="exitMsg">Biztos ki akarsz lépni?</string>
    <string name="yes">Igen</string>
    <string name="no">Nem</string>
    <string name="removeTitle">Eltávolítás</string>
    <string name="removePlayer">Biztos törölni szeretnéd ezt a játékost?</string>
    <string name="deleted">Törölve</string>
    <string name="endMatch">Vége</string>
    <string name="emptyDB">Nincs adat!</string>
    <string name="error">Hiba!</string>
    <string name="not_found">Nem található!</string>
    <string name="minutes">perc</string>
    <string name="removeMatch">Biztos törölni szeretnéd ezt a mérkőzést?</string>
    <string name="removeEvent">Biztos törölni szeretnéd ezt az eseményt?</string>
    <string name="downloaded">Letöltve</string>
    <string name="sendEmail">Email küldése...</string>
    <string name="pdfCreated">Pdf létrehozva!</string>
    <string name="done">Kész</string>
</resources>