<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawer_border"
    android:orientation="vertical"
    android:id="@+id/navigationDrawer">

    <TextView
        android:id="@+id/tvNewMatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="5dp"
        android:text="@string/new_match"
        android:textColor="@color/backGround"
        app:drawableLeftCompat="@drawable/baseline_sports_24" />

    <TextView
        android:id="@+id/tvPlayers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="5dp"
        android:text="@string/players"
        android:textColor="@color/backGround"
        app:drawableLeftCompat="@drawable/baseline_sports_handball_24" />

    <TextView
        android:id="@+id/tvMatches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="5dp"
        android:text="@string/matches"
        android:textColor="@color/backGround"
        app:drawableLeftCompat="@drawable/baseline_emoji_events_24" />

    <TextView
        android:id="@+id/tvContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="5dp"
        android:text="@string/contact"
        android:textColor="@color/backGround"
        app:drawableLeftCompat="@drawable/baseline_email_24" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/backGround" />
</LinearLayout>