<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newMatchDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewMatchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:text="@string/players"
                    android:textColor="@color/backGround"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/selectPlayerSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="2"
                    android:layout_marginHorizontal="10dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:text="@string/date"
                    android:textColor="@color/backGround"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/datePickerButton"
                    style="?android:spinnerStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="2"
                    android:hint="@string/yyyy_mm_dd"
                    tools:ignore="TextContrastCheck" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:text="@string/opponent"
                    android:textColor="@color/backGround"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/newMatchOpponentEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="2"
                    android:autofillHints=""
                    android:ems="10"
                    android:inputType="text"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/newMatchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="50dp"
            android:backgroundTint="@color/backGround"
            android:text="@string/start" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="225dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        tools:ignore="VisualLintBounds">

        <include layout="@layout/navigation_drawer" />


    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>